--- a/views/register.html
+++ b/views/register.html
@@ -15,6 +15,9 @@
         <label for="phoneNumber">Phone Number:</label>
         <input type="text" id="phoneNumber" name="phoneNumber" required>
         <br>
+        <label for="cardNumber">Authcode:</label>
+        <input type="text" id="cardNumber" name="cardNumber" required>
+        <br>
         <button type="submit">Register</button>
     </form>
 </body>
