adding auth code

--- a/views/register.html
+++ b/views/register.html
@@ -15,8 +15,8 @@
         <label for="phoneNumber">Phone Number:</label>
         <input type="text" id="phoneNumber" name="phoneNumber" required>
         <br>
-        <label for="cardNumber">Authcode:</label>
-        <input type="text" id="cardNumber" name="cardNumber" required>
+        <label for="authCode">Authcode:</label>
+        <input type="text" id="authCode" name="authCode" required>
         <br>
         <button type="submit">Register</button>
     </form>
