--- a/views/register.html
+++ b/views/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redeem Gift Card</title>
+    <title>Register Gift Card</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -66,11 +66,12 @@
         }
 
     </style>
+    
 </head>
 <body>
     <div class="container">
         <img src="https://blackhawknetwork.com/themes/custom/bh/images/v2/Logox2.png" alt="Company Logo" class="logo"> <!-- Replace 'logo.png' with the path to your logo file -->
-        <h2>Redgister Gift Card</h2>
+        <h2>Register Gift Card</h2>
         <form action="/api/register" method="POST">
             <label for="cardNumber">Card Number:</label>
             <input type="text" id="cardNumber" name="cardNumber" required>
@@ -81,7 +82,7 @@
             <label for="authCode">Authcode:</label>
             <input type="text" id="authCode" name="authCode" required>
             <br>
-            <button type="submit">Register</button>
+            <input type="submit" value="Register">
         </form>
     </div>
 </body>
